updated how-to-comment-rate-resource section in support page to reflect the current status

--- a/hs_core/templates/pages/help.html
+++ b/hs_core/templates/pages/help.html
@@ -148,8 +148,7 @@
                                         <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "Resources" in the navigation bar at the top of the page.</li>
                                         <li>Select the Title of the resource you would like to rate or comment on.</li>
-                                        <li>A new page will appear where you can Comment on a resource as well as perform various options on it. </li>
-                                        <li><strong>Currently HydroShare does not support rating resources.</strong> You may, however, rate a comment by clicking the "+1" next to the comment.</li>
+                                        <li>A new page will appear where you can comment on or rate a resource as well as perform various options on it. You may also rate a comment by clicking the "+1" next to the comment.</li>
                                     </ol>
                                 </div>
                             </div>
