--- a/hs_core/templates/pages/help.html
+++ b/hs_core/templates/pages/help.html
@@ -66,7 +66,7 @@
                             </div>
                             <div id="faq-cat-1-sub-3" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    Hydroshare is currently in Release 1.5.2 of development.
+                                    Hydroshare is in active development. The current release is <span id="release_no"></span>.
                                 </div>
                             </div>
                         </div>
@@ -160,4 +160,15 @@
         </div>
     </div>
 
+    {% block extra_js %}
+        <script type="text/javascript">
+            $(document).ready(function () {
+                var url = 'https://api.github.com/repos/hydroshare/hydroshare/releases/latest';
+                $.get(url).done(function (data) {
+                  var version = data.tag_name;
+                  $('#release_no').html(version);
+                });
+            });
+        </script>
+    {% endblock %}
 {% endblock %}
