--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1283,14 +1283,13 @@ body > .container{
 	padding: 8px 4px;
 	border: 1px solid #D3D3D3;
 	border-top: 1px solid #FFF;
-	margin-top: -1px;
+	margin-top: -6px;
 	margin-right: 20px;
 	display: block;
 }
 
 .lined-wrapper {
 	border-top: 1px solid rgb(204, 204, 204);
-	margin-top: 5px;
 	margin-bottom: 5px;
 }
 
@@ -1400,6 +1399,10 @@ body > .container{
 	width: 100%;
 }
 
+#comment {
+	width: 100%;
+}
+
 .content-block h3, #comments h3 {
 	padding-bottom: 9px;
 	border-bottom: 1px solid #eee;
@@ -1458,11 +1461,11 @@ body > .container{
 
 div#sharing-status {
     height: 34px;
-	margin: 20px 0;
+	margin-top: 40px;
 }
 
 .info-group {
-
+	width: calc(100% - 120px);
 }
 
 .tag-list {
