--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -425,7 +425,7 @@
             </div>
         {% endif %}
         <div id="permission-panel">
-            {% if user == cm.user %}
+            {% if is_owner_user %}
                 <p>You are the owner of this resource.</p>
             {% elif is_edit_user %}
                 <p>You have been given specific permission to edit this resource.</p>
