--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -2,7 +2,7 @@
 
 {% extends "pages/genericresource.html" %}
 {% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}
-
+{% load staticfiles  %}
 
 {% block extended_metadata %}
     {% if extended_metadata_exists %}
@@ -13,51 +13,93 @@
                     {% if mpmetadata %}
                         <hr>
 
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Software Version:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.software_version }}</div>
+{#                        <b>HERE</b>#}
+{##}
+{#                        {% for f in mpmetadata %}#}
+{#                            {{f.label}}{{f}}{{f.help_text|safe}}#}
+{#                        {%endfor%}#}
+
+
+
+{#                        get_form_attributes();#}
+
+{#                        <div id="program_id" hidden="true">{{ mpmetadata.id }}</div>#}
+
+{#                        <b>{{ mphelptext.modelCodeRepository}} </b>#}
+{#                        {{ mphelptext.modelSoftware }}#}
+
+                        {########################}
+                        {#     UPLOADED DATA    #}
+                        {########################}
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelSoftware}}" data-toggle="popover" data-trigger="hover"> Software </a>
+                            </div>
+                            <div class="col-sm-8">{{ mpmetadata.modelSoftware }}</div>
                         </div>
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Software Languages:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.software_language }}</div>
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelDocumentation}}" data-toggle="popover" data-trigger="hover">Documentation:</a>
+                            </div>
+                            <div class="col-sm-8">{{ mpmetadata.modelDocumentation }}</div>
                         </div>
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Software Repository:</strong></div>
-                            <div class="col-sm-8"><a target="_blank" href="{{ mpmetadata.software_repo }}">{{ mpmetadata.software_repo }}</a></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Operating System:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.operating_sys }}</div>
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelReleaseNotes}}" data-toggle="popover" data-trigger="hover">Release Notes:</a>
+                            </div>
+                            <div class="col-sm-8">{{ mpmetadata.modelReleaseNotes }}</div>
                         </div>
 
                         <hr>
 
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Date Released:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.date_released |date:"SHORT_DATE_FORMAT" }}</div>
+                        {########################}
+                        {#   MODEL  METADATA  #}
+                        {########################}
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelReleaseDate}}" data-toggle="popover" data-trigger="hover">Date Released:</a>
+                            </div>
+
+                            <div class="col-sm-8">{{ mpmetadata.modelReleaseDate |date:"SHORT_DATE_FORMAT" }}</div>
                         </div>
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Website:</strong></div>
-                            <div class="col-sm-8"><a href="{{ mpmetadata.program_website }}" target="_blank">{{ mpmetadata.program_website }}</a></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Release Notes:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.release_notes }}</div>
+
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelWebsite}}" data-toggle="popover" data-trigger="hover">Website:</a>
+                            </div>
+                            <div class="col-sm-8"><a href="{{ mpmetadata.modelWebsite }}" target="_blank">{{ mpmetadata.program_website }}</a></div>
                         </div>
 
                         <hr>
 
-                        <div class="row">
-                            <div class="col-sm-4"><strong>User Manual:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.user_manual }}</div>
+                        {########################}
+                        {#  SOFTWARE  METADATA  #}
+                        {########################}
+
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelVersion}}" data-toggle="popover" data-trigger="hover">Software Version:</a>
+                            </div>
+                            <div class="col-sm-8">{{ mpmetadata.modelVersion }}</div>
                         </div>
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Theoretical Manual:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.theoretical_manual }}</div>
+
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelProgramLanguage}}" data-toggle="popover" data-trigger="hover">Software Language:</a>
+                            </div>
+                            <div class="col-sm-8">{{ mpmetadata.modelProgramLanguage }}</div>
                         </div>
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Source Code:</strong></div>
-                            <div class="col-sm-8">{{ mpmetadata.source_code }}</div>
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelCodeRepository}}" data-toggle="popover" data-trigger="hover">Software Repository:</a>
+                            </div>
+                            <div class="col-sm-8"><a target="_blank" href="{{ mpmetadata.modelCodeRepository }}">{{ mpmetadata.modelCodeRepository }}</a></div>
+                        </div>
+                        <div class="row" id="mp">
+                            <div class="col-sm-4">
+                                <a class="mpElement" href="#" data-content="{{ mphelptext.modelOperatingSystem}}" data-toggle="popover" data-trigger="hover">Supported Operating Systems:</a>
+                            </div>
+                            <div class="col-sm-8">{{ mpmetadata.modelOperatingSystem }}</div>
                         </div>
 
                         <hr>
@@ -71,7 +113,12 @@
 
 {% block extra_js %}
     {{ block.super }}
-
-    {# resource specific js can go here #}
-
+    <script src="{% static "js/model_program.js"%}"></script>
 {% endblock %}
+
+
+{% block extra_css %}
+    <link rel="stylesheet" type="text/css" href="{% static "css/model_program.css" %}" />
+{% endblock %}
+
+
